--- a/prove01/index.html
+++ b/prove01/index.html
@@ -11,7 +11,9 @@
 	<h3>Add User</h3>
 
 	<form method="POST" action="/create-user">
-		<input type="text" name="username" placeholder="User Name"/>
+		<input type="text" name="first_name" placeholder="Bilbo"/>
+		<input type="text" name="last_name" placeholder="Baggins"/>
+		<input type="text" name="email" placeholder="bilbo@gmail.com"/>
 		<button type="submit">Add User</button>
 	</form>
 
